[gd_scene load_steps=3 format=3 uid="uid://dq2v38r6qjbyw"]

[ext_resource type="Script" path="res://scripts/CharacterCreation.gd" id="1_charcreate"]
[ext_resource type="PackedScene" uid="uid://btqfx2yywnbfy" path="res://scenes/Player.tscn" id="2_player"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_charcreate")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -420.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Create Your Character"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Character Name:"

[node name="NameInput" type="LineEdit" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Enter character name"
max_length = 20

[node name="ClassContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ClassLabel" type="Label" parent="Panel/VBoxContainer/ClassContainer"]
layout_mode = 2
text = "Class:"

[node name="ClassOptionButton" type="OptionButton" parent="Panel/VBoxContainer/ClassContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ClassDescription" type="Label" parent="Panel/VBoxContainer/ClassContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "High health and strength. Excels in close combat."
autowrap_mode = 3

[node name="SkinToneContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="SkinToneLabel" type="Label" parent="Panel/VBoxContainer/SkinToneContainer"]
layout_mode = 2
text = "Skin Tone:"

[node name="SkinToneSlider" type="HSlider" parent="Panel/VBoxContainer/SkinToneContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HairColorContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HairColorLabel" type="Label" parent="Panel/VBoxContainer/HairColorContainer"]
layout_mode = 2
text = "Hair Color:"

[node name="HairColorSlider" type="HSlider" parent="Panel/VBoxContainer/HairColorContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CreateButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
disabled = true
text = "Create Character"

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Back"

[node name="CharacterPreview" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -250.0
offset_right = -20.0
offset_bottom = 250.0
grow_horizontal = 0
grow_vertical = 2

[node name="PreviewLabel" type="Label" parent="Panel/CharacterPreview"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Preview"
horizontal_alignment = 1

[node name="PreviewPlayer" parent="Panel/CharacterPreview" instance=ExtResource("2_player")]
position = Vector2(170, 280)
